# awesome-lms-proxy

./: Cargo.toml  package.json  pnpm-lock.yaml  wrangler.toml
.github/workflows/: deploy.yml
src/: clients.rs  handler.rs  handlers.rs  lib.rs  model.rs  models.rs  router.rs  utils.rs
src/clients/: connect.rs  history.rs  list.rs  login.rs  main_page.rs  navi.rs  todo.rs  video.rs  view.rs  view_form.rs
src/handler/: lectures.rs  login.rs  not_found.rs  preflight.rs  view.rs
src/handlers/: lectures.rs  login.rs  not_found.rs  preflight.rs  reset.rs  video.rs  view.rs
src/model/: history_response_data.rs  lecture.rs  view_request_data.rs
src/models/: lecture.rs  navi_response_data.rs  video_request_data.rs  view_request_data.rs
