[package]
name = "awesome-lms-proxy"
version = "0.1.0"
edition = "2021"
authors = ["psvm203 <psvm203@proton.me>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7" }
worker-macros = { version = "0.7" }
regex = "1"
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
