[package]
name = "awesome-lms-proxy"
version = "0.1.0"
edition = "2021"
authors = ["psvm203 <psvm203@proton.me>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.10.1"
regex = "1.12.3"
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_urlencoded = "0.7.1"
worker = "0.8.0"
worker-macros = "0.8.0"
